--- a/LOGIN & SIGN UP PAGES/Sign Up.css
+++ b/LOGIN & SIGN UP PAGES/Sign Up.css
@@ -139,6 +139,9 @@ h1{
 	box-shadow: 2px 2px 5px #483D8B,
 	         -1px -1px 5px lightgray;
 }
+.Btn:active{
+    transform: translateY(2px);
+}
 input::placeholder{
 	color: darkgray;
 	text-transform: capitalize;
